Added nav drawer and updated architecture

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url '/Users/saxman/devel/m2repository'
+            url '../../m2repository'
         }
         jcenter()
     }
