--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -22,12 +22,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.support:wearable:2.0.0-alpha1'
     provided 'com.google.android.wearable:wearable:1.0.0'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
