Moved Sensor callbacks to MainActivity since you cannot run them in a service.
Turn on/off current heart rate sensor by tapping the heart. Current heart rate shows up in the middle of the heart when active.

Added permission for heart rate sensor.

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
 
         <service android:name=".services.GpsLocationService" />
+        <service android:name=".services.HeartRateSensorService" />
         <service android:name=".services.FusedLocationService" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
