--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 }
