New drawer layout and services cleanup

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
 
         <service android:name=".services.GpsLocationService" />
         <service android:name=".services.HeartRateSensorService" />
-        <service android:name=".services.FusedLocationService" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <service android:name=".services.FusedLocationService" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
