--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-N'
+//    compileSdkVersion 'android-N'
+    compileSdkVersion 23
     buildToolsVersion '24.0.0-rc3'
 
     defaultConfig {
         applicationId "com.example.google.whererunner"
-        minSdkVersion 'N'
-        targetSdkVersion 'N'
+//        minSdkVersion 'N'
+//        targetSdkVersion 'N'
+        minSdkVersion 23
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
