--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault">
+        android:theme="@style/AppTheme">
 
         <uses-library android:name="com.google.android.wearable" android:required="false" />
 
@@ -33,12 +33,9 @@
         </activity>
 
         <service android:name=".services.GpsLocationService" />
-        <service android:name=".services.HeartRateSensorService" />
         <service android:name=".services.FusedLocationService" />
+        <service android:name=".services.HeartRateSensorService" />
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
