--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,9 +25,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided 'com.google.android.wearable:wearable:1.0.0'
     compile 'com.google.android.support:wearable:2.0.0-alpha1'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.android.gms:play-services-wearable:9.0.1'
-    compile 'com.google.android.gms:play-services-maps:9.0.1'
-    compile 'com.google.android.gms:play-services-location:9.0.1'
+    compile 'com.google.android.gms:play-services-wearable:9.0.2'
+    compile 'com.google.android.gms:play-services-maps:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
 }
