--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
-        android:allowBackup="true"
+        android:name=".WhereRunnerApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="true">
 
         <uses-library android:name="com.google.android.wearable" android:required="false" />
 
