--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -26,7 +26,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     provided 'com.google.android.wearable:wearable:1.0.0'
-    compile 'com.google.android.support:wearable:2.0.0-alpha1'
+//    compile 'com.google.android.support:wearable:2.0.0-alpha1'
+    compile 'com.google.android.support:wearable:2.0.0-alpha99'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-wearable:9.0.2'
     compile 'com.google.android.gms:play-services-maps:9.0.2'
