Wired up workout recording service

--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,9 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
 //    compileSdkVersion 'android-N'
+    signingConfigs {
+        debug {
+            storeFile file('/Users/mattsullivan/.android/where-runner-debug.keystore')
+            keyAlias 'androiddebugkey'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion '24.0.0-rc3'
-
     defaultConfig {
         applicationId "com.example.google.whererunner"
 //        minSdkVersion 'N'
@@ -14,7 +19,6 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -24,9 +28,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     provided 'com.google.android.wearable:wearable:1.0.0'
-//    compile 'com.google.android.support:wearable:2.0.0-alpha1'
     compile 'com.google.android.support:wearable:2.0.0-alpha99'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services-wearable:9.0.2'
