--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <service android:name=".services.GpsLocationService" />
         <service android:name=".services.FusedLocationService" />
         <service android:name=".services.HeartRateSensorService" />
-        <service android:name=".services.ActivityRecordingService" />
+        <service android:name=".services.WorkoutRecordingService" />
 
     </application>
 
