--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-wearable:9.2.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
     compile 'com.google.android.gms:play-services-location:9.2.0'
+    compile 'com.google.android.gms:play-services-fitness:9.2.0'
 }
