--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <service android:name=".services.FusedLocationService" />
         <service android:name=".services.HeartRateSensorService" />
         <service android:name=".services.WorkoutRecordingService" />
+        <service android:name=".services.GoogleFitService" />
 
     </application>
 
