--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme"
         android:allowBackup="true">
 
-        <uses-library android:name="com.google.android.wearable" android:required="false" />
+        <uses-library android:name="com.google.android.wearable" android:required="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -26,7 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleInstance">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,5 +44,4 @@
             android:exported="false" />
 
     </application>
-
 </manifest>
