Add base Firebase Analytics, with events for starting and stopping a workout

--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
     compile 'com.google.android.gms:play-services-fitness:9.2.1'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-core:9.2.1'
 }
+
+// Includes the google-settings.json file
+apply plugin: 'com.google.gms.google-services'
