--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -31,10 +31,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.google.android.support:wearable:2.0.0-alpha3'
-    provided 'com.google.android.wearable:wearable:2.0.0-alpha3'
+    compile 'com.google.android.support:wearable:2.0.0-beta1'
+    provided 'com.google.android.wearable:wearable:2.0.0-beta1'
 
-    compile "com.android.support:support-v4:25.0.0"
+    compile "com.android.support:support-v4:25.0.1"
+    compile 'com.android.support:design:25.0.1'
 
     compile 'com.google.android.gms:play-services-wearable:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
