--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -13,8 +13,8 @@ android {
 
     defaultConfig {
         applicationId "info.saxman.whererunner"
-        versionCode 6
-        versionName "1.0.5"
+        versionCode 7
+        versionName "1.0.6"
 
         minSdkVersion 23
         targetSdkVersion 25
@@ -34,10 +34,10 @@ dependencies {
     compile 'com.google.android.support:wearable:2.0.0-beta1'
     provided 'com.google.android.wearable:wearable:2.0.0-beta1'
 
-    compile "com.android.support:support-v4:25.0.1"
-    compile 'com.android.support:design:25.0.1'
+    // used for NotificationCompat and LocalBroadcastManager
+    compile "com.android.support:support-v4:25.1.0"
 
-    compile 'com.google.android.gms:play-services-wearable:9.8.0'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
-    compile 'com.google.android.gms:play-services-location:9.8.0'
+    compile 'com.google.android.gms:play-services-wearable:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
 }
