--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
 
     signingConfigs {
         debug {
@@ -12,9 +12,9 @@ android {
     }
 
     defaultConfig {
-        applicationId "info.saxman.whererunner"
-        versionCode 7
-        versionName "1.0.6"
+        applicationId "info.saxman.android.whererunner"
+        versionCode 10
+        versionName "1.0.9"
 
         minSdkVersion 23
         targetSdkVersion 25
@@ -31,13 +31,19 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.google.android.support:wearable:2.0.0-beta1'
-    provided 'com.google.android.wearable:wearable:2.0.0-beta1'
+    compile 'com.google.android.support:wearable:2.0.0'
+    provided 'com.google.android.wearable:wearable:2.0.0'
+
+    // used for DataLayer API calls in PhoneConnectivityService
+    compile 'com.google.android.gms:play-services-wearable:10.2.0'
 
     // used for NotificationCompat and LocalBroadcastManager
-    compile "com.android.support:support-v4:25.1.0"
+    compile "com.android.support:support-v4:25.3.0"
 
-    compile 'com.google.android.gms:play-services-wearable:10.0.1'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
+    // included to resolve wearable support dependency issues while using support-v4
+    compile "com.android.support:percent:25.3.0"
+    compile "com.android.support:recyclerview-v7:25.3.0"
+
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
 }
