--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.saxman.whererunner">
+    package="info.saxman.android.whererunner">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -18,10 +18,14 @@
         android:name=".WhereRunnerApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.SplashScreen"
         android:allowBackup="true">
 
         <uses-library android:name="com.google.android.wearable" android:required="true" />
+
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -81,5 +85,20 @@
         <service
             android:name=".services.PhoneConnectivityService"
             android:exported="false" />
+
+        <service
+            android:name=".services.WorkoutComplicationProviderService"
+            android:icon="@drawable/ic_running_white"
+            android:label="@string/record_workout"
+            android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
+
+            <intent-filter>
+                <action android:name="android.support.wearable.complications.ACTION_COMPLICATION_UPDATE_REQUEST"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.support.wearable.complications.SUPPORTED_TYPES"
+                android:value="ICON"/>
+        </service>
     </application>
 </manifest>
