--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
 
         // Includes the google-settings.json file
         classpath 'com.google.gms:google-services:3.0.0'
@@ -20,6 +22,8 @@ allprojects {
         maven {
             url '../../m2repository'
         }
+
+        google()
         jcenter()
     }
 }
