--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.0'
 
     signingConfigs {
         debug {
@@ -13,11 +13,11 @@ android {
 
     defaultConfig {
         applicationId "info.saxman.android.whererunner"
-        versionCode 12
-        versionName "1.1.1"
+        versionCode 16
+        versionName '1.2.3'
 
         minSdkVersion 23
-        targetSdkVersion 25
+        targetSdkVersion 26
     }
 
     buildTypes {
@@ -31,19 +31,18 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.google.android.support:wearable:2.0.1'
-    provided 'com.google.android.wearable:wearable:2.0.1'
+    compile 'com.google.android.support:wearable:2.0.5'
+    provided 'com.google.android.wearable:wearable:2.0.5'
+
+    // Wear drawer layouts/views
+    compile 'com.android.support:wear:26.1.0'
 
     // used for DataLayer API calls in PhoneConnectivityService
-    compile 'com.google.android.gms:play-services-wearable:10.2.4'
+    compile 'com.google.android.gms:play-services-wearable:11.4.0'
 
     // used for NotificationCompat and LocalBroadcastManager
-    compile "com.android.support:support-v4:25.3.1"
+    compile 'com.android.support:support-v4:26.1.0'
 
-    // included to resolve wearable support dependency issues while using support-v4
-    compile "com.android.support:percent:25.3.1"
-    compile "com.android.support:recyclerview-v7:25.3.1"
-
-    compile 'com.google.android.gms:play-services-maps:10.2.4'
-    compile 'com.google.android.gms:play-services-location:10.2.4'
+    compile 'com.google.android.gms:play-services-maps:11.4.0'
+    compile 'com.google.android.gms:play-services-location:11.4.0'
 }
