--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
-        android:name=".WhereRunnerApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.SplashScreen"
@@ -34,6 +33,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:immersive="true"
             android:launchMode="singleInstance">
 
             <intent-filter>
