--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    compileSdkVersion 27
 
     signingConfigs {
         debug {
@@ -17,7 +16,7 @@ android {
         versionName '1.2.3'
 
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 27
     }
 
     buildTypes {
@@ -31,18 +30,18 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.google.android.support:wearable:2.0.5'
-    provided 'com.google.android.wearable:wearable:2.0.5'
+    compile 'com.google.android.support:wearable:2.1.0'
+    provided 'com.google.android.wearable:wearable:2.1.0'
 
-    // Wear drawer layouts/views
-    compile 'com.android.support:wear:26.1.0'
+    // Wear drawer layouts/views and ambient mode support.
+    compile 'com.android.support:wear:27.0.0'
 
-    // used for DataLayer API calls in PhoneConnectivityService
-    compile 'com.google.android.gms:play-services-wearable:11.4.0'
+    // Used for NotificationCompat and LocalBroadcastManager.
+    compile 'com.android.support:support-v4:27.0.0'
 
-    // used for NotificationCompat and LocalBroadcastManager
-    compile 'com.android.support:support-v4:26.1.0'
+    // Used for DataLayer API calls in PhoneConnectivityService.
+    compile 'com.google.android.gms:play-services-wearable:11.4.2'
 
-    compile 'com.google.android.gms:play-services-maps:11.4.0'
-    compile 'com.google.android.gms:play-services-location:11.4.0'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
 }
